Avoids Mobile Safari scrolling jumpiness

--- a/src/components.css
+++ b/src/components.css
@@ -1,14 +1,13 @@
 body {
-  min-height: 200vh;
+  height: 200vh;
+  width: 100%;
 }
 
 .world {
   --unit: 1vmin;
   position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  left: 50vw;
+  top: 50vh;
 }
 
 .positioner {
